Fixed an issue with the background being misaligned

--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ body {
   height: 100%;
   position: relative;
   overflow-x: hidden;
+  overflow-y: overlay;
 }
 
 h1,
@@ -376,7 +377,7 @@ main {
 
 .background {
   z-index: -1;
-  width: 100vw;
+  width: 100%;
   height: 100%;
 }
 
